chapter-05/tutorial5.3.1/canary_ingress.yaml
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: canary-ingress
#   annotations:
#     nginx.ingress.kubernetes.io/canary: "true"
#     nginx.ingress.kubernetes.io/canary-weight: "10"
# spec:
#   rules:
#   - host: demo.info
#     http:
#       paths:
#       - path: /
#         backend:
#           serviceName: green-service
#           servicePort: 80
# ---
# apiVersion: v1
# data:
#   allow-backend-server-header: "true"
#   use-forwarded-headers: "true"
# kind: ConfigMap
# metadata:
#   name: nginx-configuration

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-ingress
  annotations:
     nginx.ingress.kubernetes.io/canary: "true"
     nginx.ingress.kubernetes.io/canary-weight: "100"
spec:
  rules:
  - host: demo.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: green-service
            port: 
              number: 80
